Fixed issue with too long tags string

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -110,7 +110,8 @@ a {
 
 .customGrid {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  justify-content: space-between;
+  grid-template-columns: repeat(3, calc(33% - 1rem));
   gap: 2rem;
 }
 
